[tool.poetry]
name = "zhdiary-app"
version = "0.1.0"
description = ""
authors = ["Pacharapol Withayasakpunt"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.4"
jieba = "^0.39.0"
wordfreq = "^2.2"
bottle = "^0.12.16"

[tool.poetry.dev-dependencies]
pyinstaller = "^3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
